--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "devDependencies": {
     "readline-sync": "^1.4.10",
     "shadow-cljs": "^2.8.42"
+  },
+  "dependencies": {
+    "pg": "^7.12.1",
+    "pg-native": "^3.0.0"
   }
 }
